# macdirstat

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
scripts/: bundle-mac.sh
src/: app.rs  cache.rs  lib.rs  logging.rs  main.rs  settings.rs
src/model/: color.rs  tree.rs
src/scan/: getattrlistbulk.rs
src/ui/: files_view.rs  largest_view.rs  mod.rs  sunburst_view.rs  tree_view.rs  treemap_view.rs
tests/: scan_tests.rs
