[package]
name = "macdirstat"
version = "0.5.0"
edition = "2024"
description = "fast windirstat clone for macos"
license = "GPL-3.0"

[dependencies]
eframe = "0.31"
egui = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }
libc = "0.2"
log = "0.4"
rayon = "1"
rfd = "0.15"
treemap = "0.3"

